requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "vm8090"
version = "0.0.1"
authors = [
  { name="Morten Hauan", email="morten@hauan.me" },
]
description = "A class for interacting with K8090 or VM8090 relay boards"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
